--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
     <div class="carousel-inner" style="/*background-image: url('https://content.r9cdn.net/rimg/dimg/e9/20/c95cd7db-city-40728-16c2090182d.jpg?width=1200&height=630&crop=true')*/; height: 800px;">
       <div class="carousel-item active">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="60%" fill="#777"/></svg>
+        <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="60%" fill="#777"/></svg> -->
 
         <div class="container">
           <div class="carousel-caption text-start">
