--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </head>
   <body>
     
-<!-- <header>
+<header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Aventura Total Guatemala</a>
@@ -65,7 +65,7 @@
       </div>
     </div>
   </nav>
-</header> -->
+</header>
 
 <main>
 
